Fix scroll-link offset, align profile pic for responsive

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -21,7 +21,7 @@
 
 #about .profile-pic {
   position: relative;
-  width: 100%;
+  width: 75%;
   border-radius: 100%;
   border: 7px solid white;
 }
